# omnidoc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: CICD.yml  release.yml
assets/: Makefile  docfig-readme.md  latexmkrc  omnidoc.toml
bundles/libs/: .gitattributes  README.md  checksums.sha256  manifest.toml
bundles/libs/pandoc/headers/: semantic-blocks.tex
release/: CHECKLIST.md  omnidoc-libs.toml
scripts/: benchmark-large-book.sh  check-golden-book.sh  check-golden-pdf.sh  check-library-contract.py  check-packaged-binary.sh  check-release-install.sh  pdf-visual-contract.py  set-version.py
src/: cli.rs  cmd.rs  config.rs  constants.rs  context.rs  diagnostics.rs  doc.rs  epub.rs  error.rs  fs.rs  git.rs  latex_recorder.rs  lib.rs  main.rs  project_tools.rs  rl.rs  terminal.rs  utils.rs  webreq.rs
src/cli/: commands.rs  mod.rs  utils.rs
src/cli/handlers/: build.rs  clean.rs  common.rs  config.rs  figure.rs  fmt.rs  init.rs  lib.rs  md2html.rs  md2pdf.rs  mod.rs  new.rs  open.rs  publish.rs  quality.rs  template.rs  theme.rs  update.rs  watch.rs
src/config/: cli.rs  global.rs  manager.rs  mod.rs  project.rs  schema.rs
src/doc/: builder.rs  cleaner.rs  initializer.rs  mod.rs  opener.rs  project.rs  utils.rs
src/doc/services/: bitfield.rs  build.rs  converter.rs  figure.rs  format.rs  mod.rs
src/doc/templates/: generator.rs  mod.rs  repo.rs  types.rs
src/doctype/: mod.rs  registry.rs  types.rs
src/executor/: mod.rs  system.rs  trait_def.rs
src/fs_abstract/: mod.rs  stdlib.rs  trait_def.rs
templates/latex/: default.tex  moderncv.tex  resume_ng.tex
templates/markdown/: default.md
templates/repo/: gitignore
tests/: cli_quality.rs
tests/fixtures/golden-book/: .omnidoc.toml  main.md  pdf-visual-contract.json
tests/fixtures/golden-book/assets/: example.rs
tests/fixtures/golden-book/chapters/: chapter-one.md  chapter-two.md
tests/fixtures/golden-book/chapters/nested/: details.md
