[package]
name = "omnidoc"
version = "1.0.0"
edition = "2021"
authors = ["Jason Wang <wang_borong@163.com>"]
homepage = "https://github.com/wang-borong/omnidoc"
license = "MIT"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
git2 = "0.19"
indoc = "2"
chrono = "0.4"
#sha256 = "1.5.0"
thiserror = "1.0"
inquire = "0.9.1"
console = "0.15"
tera = "1"
which = "6"
regex = "1.10"

[package.metadata.deb]
maintainer = "Jason Wang <wang_borong@163.com>"
copyright = "Copyright (c) 2024-2025, Jason Wang"
depends = "$auto"
extended-description = """\
OmniDoc is a documentation tool for building PDF documents.
"""
section = "utils"
priority = "optional"
