[package]
name = "omnidoc"
version = "1.6.1"
edition = "2021"
authors = ["Jason Wang <wang_borong@163.com>"]
homepage = "https://github.com/wang-borong/omnidoc"
license = "MIT"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
walkdir = "2.5.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dirs = "6.0.0"
git2 = { version = "0.21.0", features = ["https", "ssh", "vendored-openssl"] }
indoc = "2.0.7"
chrono = "0.4.45"
#sha256 = "1.5.0"
thiserror = "2.0.18"
inquire = "0.9.4"
console = "0.16.4"
tera = { version = "2.0.0", features = ["glob_fs"] }
which = "8.0.4"
regex = "1.12.4"
percent-encoding = "2.3.2"
notify = "8.2.0"
blake3 = "1.8.2"
flate2 = "1.0.35"
semver = "1.0.27"
sha2 = "0.10.9"
tar = "0.4.44"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
atomic-write-file = "0.3.0"
fs2 = "0.4.3"
similar = "3.1.1"

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.deb]
maintainer = "Jason Wang <wang_borong@163.com>"
copyright = "Copyright (c) 2024-2025, Jason Wang"
depends = "$auto"
extended-description = """\
OmniDoc is a documentation tool for building PDF documents.
"""
section = "utils"
priority = "optional"
